--- a/index.html
+++ b/index.html
@@ -1500,7 +1500,7 @@
 																	comprehensive support at every step. So, explore a
 																	world of academic opportunities and courses
 																	according to your interest. </p> <a
-																	href="apply-now/index.html"><span>Apply
+																	href="contact/index.html"><span>Apply
 																		Now</span></a>
 															</div>
 														</div>
