--- a/about/index.html
+++ b/about/index.html
@@ -704,11 +704,11 @@ Additionally, after helping thousands of students for their international studie
 
 </p>
 				</div>
-				                <ul class="footer-nav pull-right clearfix">
+				                <!-- <ul class="footer-nav pull-right clearfix">
 					<ul>
     <li><a href="../indexbbc2.html?page_id=2278" style="font-weight: normal">Privacy Policy</a></li>
     <li><a href="../terms-of-use/index.html" style="font-weight: normal">Term Of Use</a></li>
-</ul>
+</ul> -->
 				</ul>
                 			</div>
 		</div>
